--- a/src/components/app-left/InfoBox.css
+++ b/src/components/app-left/InfoBox.css
@@ -7,15 +7,15 @@
   margin-right: 10px;
 }
 
-.infoBox--selected {
+.infoBox__selected {
   border-top: 10px solid greenyellow;
 }
 
-.infoBox--red {
+.infoBoxRed {
   border-color: red;
 }
 
-.infoBox__cases--green {
+.infoBox__casesGreen {
   color: lightgreen !important;
 }
 
