--- a/src/utility/util.css
+++ b/src/utility/util.css
@@ -1,28 +1,28 @@
-.info-flag img {
+.info__flag img {
   width: 100px;
   border-radius: 5px;
 }
 
-.info-name {
+.info__name {
   font-size: 20px;
   font-weight: bold;
   color: #555;
 }
 
-.info-container {
+.info__container {
   width: 150px;
 }
 
-.info-flag {
+.info__flag {
   height: 80px;
   width: 100%;
   background-size: cover;
   border-radius: 8px;
 }
 
-.info-confirmed,
-.info-recovered,
-.info-deaths {
+.info__confirmed,
+.inf__recovered,
+.info__deaths {
   font-size: 16px;
   margin-top: 5px;
 }
